--- a/src/ExamFinalBundle/Resources/views/Algorithmique/index.html.twig
+++ b/src/ExamFinalBundle/Resources/views/Algorithmique/index.html.twig
@@ -104,7 +104,7 @@
                 <div class="row">
                     <h3>Exercide 3</h3>
                     <div class="col m12">
-                        <h5>Roman to Numerals</h5>
+                        <h5>Numerals to Roman</h5>
                         <p>Write a function to convert from normal numbers to Roman Numerals: e.g.</p>
                         <p>The Romans were a clever bunch. They conquered most of Europe and ruled it for hundreds of years. They invented concrete and straight roads and even bikinis. One thing they never discovered though was the number zero. This made writing and dating extensive histories of their exploits slightly more challenging, but the system of numbers they came up with is still in use today. For example the BBC uses Roman numerals to date their programmes.</p>
                         <p>The Romans wrote numbers using letters - I, V, X, L, C, D, M. (notice these letters have lots of straight lines and are hence easy to hack into stone tablets).</p>
