--- a/app/Resources/views/default/layout.html.twig
+++ b/app/Resources/views/default/layout.html.twig
@@ -36,7 +36,7 @@
             </nav>
         {% endblock %}
 
-        {% if tps_restant <= 0 %}
+        {% if tps_restant < 0 %}
             <div>
                 <h1>Le temps est écoulé</h1>
             </div>
